--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,3 +1,6 @@
-<div>
-    <img src="" alt="">
+<div class="main">
+    <div>
+        <h1>COMIENZOS COMPARTIDOS</h1>
+        <p>Todo lo que necesitan para volver al cole con ilusión</p>
+    </div>
 </div>
