--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header>
-    <div class="image-menu">
+<header class="header">
+    <div class="menuimage">
         <img src="./images/ico-menu.svg" alt="menu">
     </div>
 </header>
