--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,3 +1,12 @@
-<div>
-    <div></div>
-</div>
+<main class="main">
+    <div class="imagecover">
+        <img src="/images/cover.jpeg" alt="play football">
+
+    </div>
+    <div>
+        <h1>COMIENZOS COMPARTIDOS</h1>
+        <p>Todo lo que necesitan para volver al cole con ilusión</p>
+    </div>
+
+
+</main>
