--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
-@import "./core/variables";
-@import "./core/reset";
-@import "./layout/header";
-@import "./layout/main";
-@import "./layout/footer"
+@import "core/variables";
+@import "core/reset";
+@import "layout/header";
+@import "layout/main";
+@import "layout/footer"
