--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,5 +2,52 @@
     <div class="foot">
         <p>HISTORIAS, MODA Y ROPA DEPORTIVA</p>
         <h2>TU TIENDA DE DEPORTE</h2>
+        <h3>El deporte nos mantiene en forma.
+            Nos mantiene alerta. Nuestra ropa deportiva para hombre y mujer te ofrece las últimas tecnologías, a la
+            altura de tu rendimiento, para que superes tu mejor marca personal.
+        </h3>
     </div>
+    <div>
+        <button class="button">Comprar</button>
+    </div>
+    <div>
+        <p>¡Prepáralos con tus marcas favoritas!</p>
+        <h2>VUELTA AL COLE</h2>
+    </div>
+    <div class="main22">
+        <div class="main2">
+            <img src="/images/nina1.png" alt="child">
+            <p>Mochilas escolares</p>
+        </div>
+        <div class="main2">
+            <img src="/images/nino.png" alt="child">
+            <p>Estuches</p>
+        </div>
+        <div class="main2">
+            <img src="/images/nina2.png" alt="child">
+            <p>Bolsas de deporte</p>
+        </div>
+        <div>
+            <button>Empezar ahora</button>
+        </div>
+    </div>
+    <aside>
+        <div>
+            <ul>
+                <li>ZAPATILLAS</li>
+                <li>ROPA</li>
+                <li>NIÑO/A</li>
+                <li>DESTACADOS</li>
+                <li>TIPS</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>TWITTER</li>
+                <li>INSTAGRAM</li>
+                <li>YOUTUBE</li>
+        </div>
+        <p>copy 2023</p>
+        <p> We (love) run</p>
+    </aside>
 </footer>
