--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,5 @@
 <header class="header">
-    <img src="./images/ico-menu.svg" alt="menu">
+    <div class="header_icon">
+        <img src="./images/ico-menu.svg" alt="menu">
+    </div>
 </header>
