--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,12 +1,9 @@
 <main class="main">
     <div class="imagecover">
         <img src="/images/cover.jpeg" alt="play football">
-
     </div>
-    <div>
+    <div class="title">
         <h1>COMIENZOS COMPARTIDOS</h1>
         <p>Todo lo que necesitan para volver al cole con ilusión</p>
     </div>
-
-
 </main>
