--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,31 +1,39 @@
+.imagecover {
+  background: url(/images/cover.jpeg);
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  flex-direction: column;
+
+
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
 // .main {
-//   background: url(/images/cover.jpeg);
-//   width: 100vh;
-//   height: 100vh;
 //   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   background-size: cover;
-//   background-position: center;
-//   color: white;
+//   width: 500px;
+//   height: 500px;
 // }
 
-.imagecover {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
+// .imagecover {
+//   display: flex;
+//   width: 100%;
+//   height: 100%;
 
-.imagecover img {
-  width: 100%;
-  height: 100%;
-}
 
-.imagecover h1,
-p {
-  font-size: 40px;
-  color: rgb(127, 20, 20);
-  position: absolute;
-}
+// }
 
-/
+// .imagescover_title {
+//   display: flex;
+//   align-items: center;
+//   color: white;
+
+// }
