--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,3 +4,6 @@ $font-main: 'Roboto', sans-serif;
 // colors
 $color-bg: #f3f4f5;
 $color-secondary: #999;
+
+$color-primary: #6c933e;
+$color-terciary: #d9e4cc;
