--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,9 +1,45 @@
-<main class="main">
+<main class="main" id="main">
+    <!-- // primera caja -->
     <div class="imagecover">
-        <img src="/images/cover.jpeg" alt="play football">
-    </div>
-    <div class="title">
         <h1>COMIENZOS COMPARTIDOS</h1>
         <p>Todo lo que necesitan para volver al cole con ilusión</p>
+        <a href="#footer"> <img src="/images/ico-scroll-down.svg" alt=""></a>
     </div>
+    <!-- segunda caja  -->
+    <div class="box2">
+        <h4>HISTORIAS, MODA Y ROPA DEPORTIVA</h4>
+        <h2>TU TIENDA DE DEPORTE</h2>
+        <p>El deporte nos mantiene en forma.
+            Nos mantiene alerta. Nuestra ropa deportiva para hombre y mujer te ofrece las últimas tecnologías, a la
+            altura de tu rendimiento, para que superes tu mejor marca personal.
+        </p>
+        <div>
+            <button class="button">Comprar</button>
+        </div>
+    </div>
+
+    <div class="box3">
+        <p>¡Prepáralos con tus marcas favoritas!</p>
+        <h2>VUELTA AL COLE</h2>
+
+        <div class="boxImgs">
+            <div class="containerbox">
+                <img src="/images/nina1.png" alt="child" />
+                <p>Mochilas escolares</p>
+            </div>
+            <div class="containerbox">
+                <img src="/images/nino.png" alt="child">
+                <p>Estuches</p>
+            </div>
+            <div class="containerbox">
+                <img src="/images/nina2.png" alt="child">
+                <p>Bolsas de deporte</p>
+            </div>
+            <div>
+                <button>Empezar ahora</button>
+            </div>
+        </div>
+    </div>
+
+
 </main>
