--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,6 +3,11 @@
 }
 
 .header_icon {
+  background: rgba(22, 147, 22, 0.668);
+  width: 37px;
+  height: 37px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
-
 }
