--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,39 +1,109 @@
+main {
+  // font-family: $font-main;
+}
+
 .imagecover {
   background: url(/images/cover.jpeg);
-  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   background-size: cover;
   background-position: center;
   flex-direction: column;
-
+  height: 552px;
 
 }
 
-.title {
-  display: flex;
-  justify-content: center;
-  color: white;
+
+.imagecover {
+  & h1 {
+    display: flex;
+    justify-content: center;
+    color: white;
+    text-align: center;
+    margin-top: 346px;
+  }
+
+  & p {
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-size: 27px;
+    text-align: center;
+  }
+
+
+  & a {
+    width: 38.2px;
+    height: 38.2px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-// .main {
-//   display: flex;
-//   width: 500px;
-//   height: 500px;
-// }
+.box2 {
+  padding: 34px 17px 2px 13px;
 
-// .imagecover {
-//   display: flex;
-//   width: 100%;
-//   height: 100%;
+  & h4 {
+    color: $color-primary;
+  }
 
+  & h2 {}
 
-// }
+  & p {
+    margin: 10px 0 42px;
+    /* font-family: Roboto; */
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.67;
+    letter-spacing: normal;
+    text-align: left;
+    text-decoration: none;
+  }
 
-// .imagescover_title {
-//   display: flex;
-//   align-items: center;
-//   color: white;
+  & button {
+    width: 160px;
+    height: 45px;
+    flex-grow: 0;
+    margin: 0 0 10px;
+    border-radius: 22.5px;
+    border: solid 2px;
+    color: $color-primary;
+    background: white;
+    font-size: 20px;
 
-// }
+  }
+}
+
+.box3 {
+  background: $color-terciary;
+
+  & div {
+    display: grid;
+    justify-content: center;
+    /* Una columna */
+  }
+
+  & button {
+    width: 184px;
+    height: 47.3px;
+    border-radius: 22.5px;
+    background: $color-primary;
+    color: white;
+  }
+}
+
+.containerbox {
+  & img {
+    width: 114px;
+    height: 124.1px;
+    border-radius: 50%;
+  }
+
+  & p {}
+}
