--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -35,7 +35,7 @@
                 <img src="/images/nina2.png" alt="child">
                 <p>Bolsas de deporte</p>
             </div>
-            <div>
+            <div class="buttonE">
                 <button>Empezar ahora</button>
             </div>
         </div>
