--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer" id="footer">
     <a href="#main"> <img src="/images/ico-arrow.svg" alt=""></a>
     <div>
-        <ul>
+        <ul class="li1">
             <li>ZAPATILLAS</li>
             <li>ROPA</li>
             <li>NIÑO/A</li>
@@ -10,7 +10,7 @@
         </ul>
     </div>
     <div>
-        <ul>
+        <ul class="li2">
             <li>TWITTER</li>
             <li>INSTAGRAM</li>
             <li>YOUTUBE</li>
