--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,7 @@
 <header class="header">
     <div class="header_icon">
-        <img src="./images/ico-menu.svg" alt="menu">
+        <a href="https://adalab.es/">
+            <img src="./images/ico-menu.svg" alt="menu">
+        </a>
     </div>
 </header>
