--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -100,6 +100,7 @@ main {
     border-radius: 22.5px;
     background: $color-primary;
     color: white;
+    border: darkgray;
   }
 
   & p {
@@ -151,6 +152,7 @@ main {
       border-radius: 22.5px;
       background: $color-primary;
       color: white;
+      border: darkgray;
 
     }
 
@@ -207,6 +209,7 @@ main {
       border-radius: 22.5px;
       background: $color-primary;
       color: white;
+      border: darkgray;
 
     }
 
@@ -238,6 +241,7 @@ main {
       width: 114px;
       height: 124.1px;
       border-radius: 50%;
+      margin-bottom: 30px;
     }
 
     & p {}
