--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,6 +18,6 @@
             <li>YOUTUBE</li>
     </div>
 
-    <p>copy 2023</p>
-    <p> We (love) run</p>
+    <p>© 2023</p>
+    <p> We 💚 run</p>
 </footer>
