--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -117,11 +117,16 @@ main {
     justify-content: center;
     padding-top: 20px;
   }
+
+  & div p {
+    color: black;
+  }
 }
 
 .buttonE {
   padding-bottom: 23px;
   padding-top: 12px;
+  font-size: 20px;
 }
 
 .containerbox {
@@ -177,6 +182,11 @@ main {
     padding-top: 12px;
     display: flex;
     justify-content: last baseline;
+
+
+    & button {
+      font-size: 20px;
+    }
   }
 
   .containerbox {
@@ -184,6 +194,8 @@ main {
       width: 114px;
       height: 124.1px;
       border-radius: 50%;
+      margin-bottom: 30px;
+      margin-left: 15px;
     }
 
     & p {}
